--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,14 @@ a {
 * {
   box-sizing: border-box;
 }
-
+#blue {
+  background-color: blue;
+  height: 90vh;
+}
+img {
+  width: 100%;
+  height: auto;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
